--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>About me</title>
-	<link rel="stylesheet" href="../styles/styles.css">
+	<link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
 	<div id="content">
