Working links in homepage

--- a/src/index.html
+++ b/src/index.html
@@ -38,54 +38,54 @@
 			<div id="trees">
 				<ul id="projects-tree" class="tree">
 					<li>
-						<p>/src/projects</p>
+						<a href="projects/projects-home.html">/src/projects</a>
 						<ul class="tree-parent">
 							<li>
-								<a>Orbit Simulator</a>
+								<a href="projects/orbit-sim.html">Orbit Simulator</a>
 							</li>
 							<li>
-								<a>Live Rocket HUD</a>
+								<a href="projects/rocket-hud.html">Live Rocket HUD</a>
 							</li>
 							<li>
-								<a>TypeRacer Reimagined</a>
+								<a href="projects/typeracer-reimagined.html">TypeRacer Reimagined</a>
 							</li>
 							<li>
-								<a>more...</a>
+								<a href="projects/projects-home.html">more...</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul id="blogs-tree" class="tree">
 					<li>
-						<p><a>/src/blog</a></p>
+						<a href="blogs/blog-home.html">/src/blog</a>
 						<ul class="tree-parent">
 							<li>
-								<a>Blog 1</a>
+								<a href="blogs/blog1.html">Blog 1</a>
 							</li>
 							<li>
-								<a>Blog 2</a>
+								<a href="blogs/blog2.html">Blog 2</a>
 							</li>
 							<li>
-								<a>Blog 3</a>
+								<a href="blogs/blog3.html">Blog 3</a>
 							</li>
 							<li>
-								<a>more...</a>
+								<a href="blogs/blog-home.html">more...</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul id="about-tree" class="tree">
 					<li>
-						<p><a>/src/about</a></p>
+						<p><a href="about/this-site.html">/src/about</a></p>
 						<ul class="tree-parent">
 							<li>
-								<a>bio</a>
+								<a href="about/bio.html">bio</a>
 							</li>
 							<li>
-								<a>skills</a>
+								<a href="about/skills.html">skills</a>
 							</li>
 							<li>
-								<a>this-site</a>
+								<a href="about/this-site.html">this-site</a>
 							</li>
 						</ul>
 					</li>
@@ -95,10 +95,10 @@
 						<p><a>/src/contact</a></p>
 						<ul class="tree-parent">
 							<li>
-								<a>e-mail</a>
+								<a href="mailto:perseuslynx333@gmail.com">e-mail</a>
 							</li>
 							<li>
-								<a>discord</a>
+								<a href="discord://-/users/581902699247829046">discord</a>
 							</li>
 						</ul>
 					</li>
