--- a/src/index.html
+++ b/src/index.html
@@ -60,13 +60,13 @@
 						<a href="blogs/blog-home.html">/src/blog</a>
 						<ul class="tree-parent">
 							<li>
-								<a href="blogs/blog1.html">Blog 1</a>
+								<a href="blogs/blog1.html">Linux Issues</a>
 							</li>
 							<li>
-								<a href="blogs/blog2.html">Blog 2</a>
+								<a href="blogs/blog2.html">On memories and dreams</a>
 							</li>
 							<li>
-								<a href="blogs/blog3.html">Blog 3</a>
+								<a href="blogs/blog3.html">Animal farm</a>
 							</li>
 							<li>
 								<a href="blogs/blog-home.html">more...</a>
@@ -76,7 +76,7 @@
 				</ul>
 				<ul id="about-tree" class="tree">
 					<li>
-						<p><a href="about/this-site.html">/src/about</a></p>
+						<p>/src/about</p>
 						<ul class="tree-parent">
 							<li>
 								<a href="about/bio.html">bio</a>
@@ -90,7 +90,7 @@
 						</ul>
 					</li>
 				</ul>
-				<ul id="about-tree" class="tree">
+				<ul id="contact-tree" class="tree">
 					<li>
 						<p><a>/src/contact</a></p>
 						<ul class="tree-parent">
