--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>About me</title>
-	<link rel="stylesheet" href="../src/styles/home.css">
+	<link rel="stylesheet" href="./src/styles/home.css">
 </head>
 <body>
 	<!--Adds the theme inputs-->
