--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta charset="UTF-8">
 	<title>About me</title>
 	<link rel="stylesheet" href="./src/styles/home.css">
+	{% include trees-horizontal-style.html %}
+	{% include trees-style.html %}
+	{% include theme-style.html %}
 </head>
 <body>
 	<!--Adds the theme inputs-->
@@ -18,75 +21,7 @@
 					<h1>Hello there, I'm <em>Perseus</em>!</h1>
 					<p>I love <s>wasting</s> investing my time <span id="cycle-interests"></span></p>
 			</div>
-			<div id="trees">
-				<ul id="projects-tree" class="tree">
-					<li>
-						<a href="projects/projects-home.html">/src/projects</a>
-						<ul class="tree-parent">
-							<li>
-								<a href="projects/orbit-sim.html">Orbit Simulator</a>
-							</li>
-							<li>
-								<a href="projects/rocket-hud.html">Live Rocket HUD</a>
-							</li>
-							<li>
-								<a href="projects/typeracer-reimagined.html">TypeRacer Reimagined</a>
-							</li>
-							<li>
-								<a href="projects/projects-home.html">more...</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-				<ul id="blogs-tree" class="tree">
-					<li>
-						<a href="blogs/blog-home.html">/src/blog</a>
-						<ul class="tree-parent">
-							<li>
-								<a href="blogs/blog1.html">Linux Issues</a>
-							</li>
-							<li>
-								<a href="blogs/blog2.html">On memories and dreams</a>
-							</li>
-							<li>
-								<a href="blogs/blog3.html">Animal farm</a>
-							</li>
-							<li>
-								<a href="blogs/blog-home.html">more...</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-				<ul id="about-tree" class="tree">
-					<li>
-						<p>/src/about</p>
-						<ul class="tree-parent">
-							<li>
-								<a href="about/bio.html">bio</a>
-							</li>
-							<li>
-								<a href="about/skills.html">skills</a>
-							</li>
-							<li>
-								<a href="about/this-site.html">this-site</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-				<ul id="contact-tree" class="tree">
-					<li>
-						<p><a>/src/contact</a></p>
-						<ul class="tree-parent">
-							<li>
-								<a href="mailto:perseuslynx333@gmail.com">e-mail</a>
-							</li>
-							<li>
-								<a href="discord://-/users/581902699247829046">discord</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</div>
+			{% include trees.html %}
 		</div>
 	</div>
 </body>
