Home Redesign - Image
- Changed home layout
    - Added image
    - Small tweaks
- Small tweaks

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 		{% include themes.html %}
 		<div id="content">
 			<div id="welcome">
+				<div id="pfp-container">
+					<img src="/assets/pfp.png">
+				</div>
+				<div id="message">
 					<h1>Hello there, I'm <em>Perseus</em>!</h1>
 					<p>I love <s>wasting</s> investing my time <span id="cycle-interests"></span></p>
+				</div>
 			</div>
 			{% include trees.html %}
 		</div>
