--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div id="content">
 			<div id="welcome">
 				<div id="pfp-container">
-					<img src="/assets/pfp.png">
+					<img src="/assets/pfp.webp">
 				</div>
 				<div id="message">
 					<h1>Hello there, I'm <em>Perseus</em>!</h1>
