Redistribution of collections
- Posts are now inside the "blog" collection instead of "posts" - this was done because the posts collection was too hardcoded

- Also projects is now in it's own collection

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<div id="content">
 			<div id="welcome">
 				<div id="pfp-container">
-					<img src="/assets/pfp.webp">
+					<img src="/src/assets/pfp.webp">
 				</div>
 				<div id="message">
-					<h1>Hello there, I'm <em>Perseus</em>!</h1>
+					<h1>Hello there, I am <em>Perseus</em>!</h1>
 					<p>I love <s>wasting</s> investing my time <span id="cycle-interests"></span></p>
 				</div>
 			</div>
