--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<title>About me</title>
+	<title>my webSite</title>
 	<link rel="stylesheet" href="./src/styles/home.css">
 	{% include trees-horizontal-style.html %}
 	{% include trees-style.html %}
