Added project homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>my webSite</title>
 	<link rel="stylesheet" href="./src/styles/home.css">
 	{% include trees-horizontal-style.html %}
