--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>my webSite</title>
-	<link rel="stylesheet" href="./src/styles/home.css">
 	{% include trees-horizontal-style.html %}
 	{% include trees-style.html %}
 	{% include themes-style.html %}
 	{% include general-style.html %}
+	<link rel="stylesheet" href="./src/styles/home.css">
 	{% include umami-analytics.html %}
 </head>
 <body>
 	{% include themes-inputs.html %}
 	<div id="view">
-		{% include themes.html %}
 		<div id="content">
 			<div id="welcome">
 				<div id="pfp-container">
@@ -29,6 +28,9 @@
 			</div>
 			{% include trees.html %}
 		</div>
-		{% include site-info.html %}
+		<div id="other-buttons">
+			{% include themes.html %}
+			{% include site-info.html %}
+		</div>
 	</div>
 </body>
