feat: added javascript-free (again)
added "JavaScript Free!" again just on the homepage.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 		</div>
 		<div id="other-buttons">
 			{% include themes.html %}
-			{% include site-info.html %}
+			<div>
+				{% include site-info.html %}
+				<div id="javascript-free">
+					<p>JavaScript Free!</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
