impr: cycle-interests
More descriptive interests

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div>
 				{% include site-info.html %}
 				<div id="javascript-free">
-					<p>JavaScript Free!</p>
+					JavaScript Free!
 				</div>
 			</div>
 		</div>
