impr: Simplified homepage
Removed trees from homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>my webSite</title>
-	{% include trees-horizontal-style.html %}
 	{% include trees-style.html %}
 	{% include themes-style.html %}
 	{% include general-style.html %}
@@ -27,6 +26,12 @@
 				</div>
 			</div>
 			{% include trees.html %}
+			<div id="pages">
+				<a href="/projects">/projects</a>
+				<a href="/blog">/blog</a>
+				<a href="/this-site">/about</a>
+				<a href="discord://-/users/581902699247829046">/contact</a>
+			</div>
 		</div>
 		<div id="other-buttons">
 			{% include themes.html %}
