feat: added meta descriptions for all pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="The website homepage, where you can view my projects, blogs, interests, about me information and contact details. I am Perseus Lynx.">
 	<title>my webSite</title>
 	{% include trees-style.html %}
 	{% include themes-style.html %}
