feat(seo): added alt text for all images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="content">
 			<div id="welcome">
 				<div id="pfp-container">
-					<img src="/src/assets/pfp.webp">
+					<img src="/src/assets/pfp.webp" alt="Round profile picture">
 				</div>
 				<div id="message">
 					<h1>Hello there, I am <em>Perseus</em>!</h1>
