--- a/src/projects.html
+++ b/src/projects.html
@@ -6,10 +6,10 @@ permalink: /projects/
 ---
 
 <div id="projects-list">
-    {% for project in site.projects reversed%}
+    {% for project in site.projects reversed %}
       <div class="project">
         <div class="project-header">
-            <img class="thumbnail" src="/src/assets/{{ project.slug }}.webp">
+            <img class="thumbnail" src="/src/assets/{{ project.slug }}.webp" alt="{{ project.title }}">
             <div class="title">
               <a href="{{ project.url }}">{{ project.title }}</a>
             </div>
