--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<h2>Perseus</h2>
 					</div>
 					<div id="subtitle">
-						<em>"Ad astra"</em>
+						<em>“Ad astra”</em>
 					</div>
 					<div id="message">
 						<p>Welcome to my tiny corner of the internet!</p>
@@ -45,11 +45,11 @@
 						<svg class=page-icn xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-newspaper-icon lucide-newspaper"><path d="M15 18h-5"/><path d="M18 14h-8"/><path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"/><rect width="8" height="4" x="10" y="6" rx="1"/></svg>
 						<span class="page-lbl">/blog</span>
 					</a>
-					<a class="page-btn" href="/this-site">
+					<a class="page-btn" href="/about">
 						<svg class=page-icn xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-info-icon lucide-info"><circle cx="12" cy="12" r="10"/><path d="M12 16v-4"/><path d="M12 8h.01"/></svg>
 						<span class="page-lbl">/about</span>
 					</a>
-					<a class="page-btn" href="discord://-/users/581902699247829046">
+					<a class="page-btn" href="/contact">
 						<svg class="page-icn" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail-icon lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
 						<span class="page-lbl">/contact</span>
 					</a>
